<resources>
    <string name="app_name">Landmark Navigator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--  Splash Screen  -->
    <string name="splash_screen_background_description">background</string>

    <!--  Login Screen  -->
    <string name="login_email_text_view">Email</string>
    <string name="login_password_text_view">Password</string>
    <string name="login_registration_navigation">No account? Click here to register</string>
    <string name="login_submit_button">Login</string>
    <string name="login_title">Login</string>

    <!--  Registration Screen  -->
    <string name="registration_email_text_view">Email</string>
    <string name="registration_password_text_view">Password</string>
    <string name="registration_repeat_text_view">Repeat Password</string>
    <string name="registration_submit_button">Register</string>
    <string name="registration_title">Register</string>
    <string name="registration_navigation">Already have an account? Click here to login</string>

    <!--  Registration settings Screen  -->
    <string name="registration_settings_title">Settings</string>
    <string name="registration_settings_units">Measurement Units</string>
    <string name="registration_settings_theme">Theme</string>
    <string name="registration_settings_landmark_type">Choose Landmark</string>
    <string name="registration_settings_submit_button">Continue</string>

    <!-- Settings Screen -->
    <string name="settings_title">Settings</string>
    <string name="settings_units">Select measurement Units</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_landmark_type">Select Landmark</string>
    <string name="settings_submit_button">Save</string>
    <string name="settings_logout_button">Logout</string>
    <string name="settings_app_version">App Version 1.0</string>

    <!-- Favourites Screen -->
    <string name="favourites_title">Favourites</string>

    <!-- Home screen -->
    <string name="home_screen_title">Home Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>